<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="00dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="50sp"/>

            <EditText
                android:id="@+id/et_log_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/req_name"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/et_log_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/req_pass"
                android:importantForAutofill="no"/>

            <Button
                android:id="@+id/log_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/log_init"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:layout_margin="10dp"/>

            <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>