<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:gravity="center"
    android:elevation="10dp">


    <!-- Mensaje -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Axel Lara Madero"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cont"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="19280766"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:gravity="center"/>

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnCloseP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_close"
            android:backgroundTint="@android:color/darker_gray"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

</LinearLayout>
