<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@string/instructions'
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="560dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/btn_info"/>

                <ImageButton
                    android:id="@+id/btn_tv"
                    android:layout_width="129dp"
                    android:layout_height="129dp"
                    android:src="@drawable/television"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_info"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/btn_TV"
                    android:background="@drawable/rounded_button_purple"
                    android:scaleType="centerCrop"/>

                <ImageButton
                    android:id="@+id/btn_gallery"
                    android:layout_width="129dp"
                    android:layout_height="129dp"
                    android:src="@drawable/gallery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_tv"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/btn_galery"
                    android:scaleType="centerCrop"
                    android:background="@drawable/rounded_button_pink"/>

                <ImageButton
                    android:id="@+id/btn_cam"
                    android:layout_width="129dp"
                    android:layout_height="129dp"
                    android:src="@drawable/camera"
                    android:background="@drawable/rounded_button_purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"/>

                <ImageButton
                    android:id="@+id/btn_lantern"
                    android:layout_width="129dp"
                    android:layout_height="129dp"
                    android:src="@drawable/flash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_cam"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/rounded_button_pink"/>

                <ImageButton
                    android:id="@+id/btn_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_lantern"
                    android:layout_margin="16dp"/>

                <ImageButton
                    android:id="@+id/btn_exit"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_margin="16dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/rounded_button_red"
                    android:contentDescription="@string/btn_closeSesion"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>